--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,11 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.firebase:firebase-database:17.0.0'
+    implementation 'com.google.firebase:firebase-storage:17.0.0'
     androidTestImplementation 'junit:junit:4.12'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
 
 }
 // ADD THIS AT THE BOTTOM
