--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.sinemaprojesi">
+    package="com.odev.sinemaprojesi">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -12,29 +12,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
-        <activity android:name=".GetBudgetInfoFromDatabase"></activity>
-        <activity android:name=".BudgetActivity" />
-        <activity android:name=".GetInfoFromDatabaseActivity">
+        <activity android:name=".EmployeesActivity"></activity>
+        <activity android:name=".GetEmployeeInfoFromDatabase" />
+        <activity android:name=".LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".GetBudgetInfoFromDatabase" />
+        <activity android:name=".BudgetActivity" />
+        <activity android:name=".TicketActivity" />
+        <activity android:name=".GetInfoFromDatabaseActivity" />
         <activity android:name=".AddNewFilmActivity" />
         <activity android:name=".SignUpActivity" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
-        <activity android:name=".AdminOrUserActivity" />
-        <activity android:name=".TicketActivity" />
-        <activity android:name=".FirstLoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".FirstLoginActivity"></activity>
         <activity android:name=".MainActivity" />
     </application>
 
